<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/question_background"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="40dp"
        style="@style/question_bg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/question"
        style="@style/heading.semibold"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="25dp"
        android:paddingStart="50dp"
        android:text="@string/text_first_question"
        app:layout_constraintBottom_toBottomOf="@id/question_background"
        app:layout_constraintEnd_toEndOf="@id/question_background"
        app:layout_constraintStart_toStartOf="@id/question_background"
        app:layout_constraintTop_toTopOf="@id/question_background"
        tools:ignore="RtlSymmetry" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_option1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/primaryButton.answers"
        android:text="@string/text_first_question_answer1"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="40dp"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/question_background"
        app:layout_constraintStart_toStartOf="@id/question_background"
        app:layout_constraintEnd_toEndOf="@id/question_background" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_option2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/primaryButton.answers2"
        android:text="@string/text_first_question_answer2"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/button_option1"
        app:layout_constraintStart_toStartOf="@id/button_option1"
        app:layout_constraintEnd_toEndOf="@id/button_option1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_option3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/primaryButton.answers"
        android:text="@string/text_first_question_answer3"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/button_option2"
        app:layout_constraintStart_toStartOf="@id/button_option2"
        app:layout_constraintEnd_toEndOf="@id/button_option2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_option4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/primaryButton.answers"
        android:text="@string/text_first_question_answer4"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/button_option3"
        app:layout_constraintStart_toStartOf="@id/button_option3"
        app:layout_constraintEnd_toEndOf="@id/button_option3" />

</androidx.constraintlayout.widget.ConstraintLayout>