<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_quiz"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/quiz_title_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/page_title_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/quiz_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz_page_title"
        style="@style/page_title"
        app:layout_constraintTop_toTopOf="@+id/quiz_title_background"
        app:layout_constraintBottom_toBottomOf="@id/quiz_title_background"
        app:layout_constraintStart_toStartOf="@id/quiz_title_background"
        app:layout_constraintEnd_toEndOf="@id/quiz_title_background"/>

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/bg"
        app:layout_constraintTop_toBottomOf="@id/quiz_title_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/question_background"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="40dp"
        style="@style/question_bg"
        app:layout_constraintTop_toBottomOf="@id/quiz_title_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/question"
        style="@style/heading.semibold"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="25dp"
        android:paddingStart="50dp"
        android:text="@string/text_first_question"
        app:layout_constraintBottom_toBottomOf="@id/question_background"
        app:layout_constraintEnd_toEndOf="@id/question_background"
        app:layout_constraintStart_toStartOf="@id/question_background"
        app:layout_constraintTop_toTopOf="@id/question_background"
        tools:ignore="RtlSymmetry" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_option1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/primaryButton.answers"
        android:text="@string/text_first_question_answer1"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="40dp"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/question_background"
        app:layout_constraintStart_toStartOf="@id/question_background"
        app:layout_constraintEnd_toEndOf="@id/question_background" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_option2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/primaryButton.answers"
        android:text="@string/text_first_question_answer2"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/button_option1"
        app:layout_constraintStart_toStartOf="@id/button_option1"
        app:layout_constraintEnd_toEndOf="@id/button_option1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_option3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/primaryButton.answers"
        android:text="@string/text_first_question_answer3"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/button_option2"
        app:layout_constraintStart_toStartOf="@id/button_option2"
        app:layout_constraintEnd_toEndOf="@id/button_option2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_option4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/primaryButton.answers"
        android:text="@string/text_first_question_answer4"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/button_option3"
        app:layout_constraintStart_toStartOf="@id/button_option3"
        app:layout_constraintEnd_toEndOf="@id/button_option3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_continue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/secondaryButton"
        android:text="@string/button_continue"
        android:visibility="gone"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:layout_marginTop="60dp"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/button_option4"
        app:layout_constraintStart_toStartOf="@id/button_option1"
        app:layout_constraintEnd_toEndOf="@id/button_option1" />

    <ImageView
        android:id="@+id/correct"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/correct"
        android:visibility="gone"
        tools:ignore="MissingConstraints"/>

    <ImageView
        android:id="@+id/wrong"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/wrong"
        android:visibility="gone"
        tools:ignore="MissingConstraints"/>

</androidx.constraintlayout.widget.ConstraintLayout>