<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/home_title_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/page_title_background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/home_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_page_title"
            style="@style/page_title"
            app:layout_constraintTop_toTopOf="@+id/home_title_background"
            app:layout_constraintBottom_toBottomOf="@id/home_title_background"
            app:layout_constraintStart_toStartOf="@id/home_title_background"
            app:layout_constraintEnd_toEndOf="@id/home_title_background" />

        <ImageView
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/bg"
            app:layout_constraintTop_toBottomOf="@id/home_title_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/welcome_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_message"
            style="@style/heading"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/home_title_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/logo"
            android:layout_marginTop="35dp"
            app:layout_constraintTop_toBottomOf="@id/welcome_message"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            style="@style/Logo"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="60dp"
            android:inputType="text"
            android:maxLength="25"
            android:padding="20dp"
            android:hint="@string/textfield_placeholder_name"
            android:background="@android:drawable/dialog_holo_light_frame"
            style="@style/placeholder"
            app:layout_constraintTop_toBottomOf="@id/app_name"
            app:layout_constraintStart_toStartOf="@id/logo"
            app:layout_constraintEnd_toEndOf="@id/logo"
            app:layout_constraintHorizontal_bias="0.5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/primaryButton"
            android:text="@string/button_start"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:layout_marginTop="40dp"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@id/nameEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_study_materials"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/primaryButton.orange"
            android:text="@string/button_study_materials"
            android:layout_marginTop="20dp"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@id/button_start"
            app:layout_constraintStart_toStartOf="@id/button_start"
            app:layout_constraintEnd_toEndOf="@id/button_start" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
