<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/results_title_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/page_title_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/result_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_page_title"
        style="@style/page_title"
        app:layout_constraintTop_toTopOf="@+id/results_title_background"
        app:layout_constraintBottom_toBottomOf="@id/results_title_background"
        app:layout_constraintStart_toStartOf="@id/results_title_background"
        app:layout_constraintEnd_toEndOf="@id/results_title_background"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/results_title_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/bg"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/result_background"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@android:drawable/dialog_holo_light_frame"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="175dp"
                style="@style/question_bg"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/question"
                style="@style/heading.bold"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:padding="25dp"
                android:paddingStart="50dp"
                android:text="@string/result_message"
                app:layout_constraintTop_toTopOf="@id/result_background"
                app:layout_constraintBottom_toBottomOf="@id/result_background"
                app:layout_constraintEnd_toEndOf="@id/result_background"
                app:layout_constraintStart_toStartOf="@id/result_background"
                tools:ignore="RtlSymmetry" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_reattempt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/primaryButton"
                android:text="@string/button_reattempt"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:layout_marginTop="40dp"
                android:padding="12dp"
                app:layout_constraintTop_toBottomOf="@id/result_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_view_answers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/primaryButton"
                android:text="@string/button_view_answers"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:layout_marginTop="20dp"
                android:padding="12dp"
                app:layout_constraintTop_toBottomOf="@id/button_reattempt"
                app:layout_constraintStart_toStartOf="@id/button_reattempt"
                app:layout_constraintEnd_toEndOf="@id/button_reattempt" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_study_materials"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/primaryButton.orange"
                android:text="@string/button_study_materials"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:layout_marginTop="20dp"
                android:padding="12dp"
                app:layout_constraintTop_toBottomOf="@id/button_view_answers"
                app:layout_constraintStart_toStartOf="@id/button_view_answers"
                app:layout_constraintEnd_toEndOf="@id/button_view_answers" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>